--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,12 @@
     
     <nav>
         <ul id="nav" role="navigation">
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="/homem" class="category-man">Homem</a></li>
+            <li><a href="/mulher" class="category-woman">Mulher</a></li>
+            <li><a href="/geek" class="category-geek">Geek</a></li>
+            <li><a href="/cultura" class="category-culture">Cultura</a></li>
+            <li><a href="/esporte" class="category-sport">Esporte</a></li>
+            <li><a href="/casa" class="category-house">Casa</a></li>
         </ul>
     </nav>
     
