--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Sophisto Boilerplate</title>
+    <title>Presenteria</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     
