--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,22 @@
     
     <header role="banner">
         <h1 class="logo">Presenteria</h1>
-        <p class="intro">
-            Quem você quer presentear? <a href="/homem" class="category man">Homem</a> ou <a href="/mulher" class="category woman">Mulher</a>?<br>
-            Já sei, seu amigo é <a href="/geek" class="category geek">Geek</a>? Gosta de <a href="/cultura" class="category culture">Cultura</a>?<br>
-            Pratica <a href="/esporte" class="category sport">Esporte</a> ou prefere ficar em <a href="/casa" class="category house">Casa</a>?          
-        </p>
+        <div class="side">
+            <p class="intro">
+                Quem você quer presentear? <a href="/homem" class="category man">Homem</a> ou <a href="/mulher" class="category woman">Mulher</a>?<br>
+                Já sei, seu amigo é <a href="/geek" class="category geek">Geek</a>? Gosta de <a href="/cultura" class="category culture">Cultura</a>?<br>
+                Pratica <a href="/esporte" class="category sport">Esporte</a> ou prefere ficar em <a href="/casa" class="category house">Casa</a>?          
+            </p>
+            <ul class="share">
+                <li class="twitter">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Presenteria" data-related="Presenteria" data-dnt="true" data-lang="pt-BR">Tweet</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                </li>
+                <li class="facebook">
+                    <iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fpresenteria.com.br&amp;send=false&amp;layout=button_count&amp;width=114&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=326273014110834" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:114px; height:21px;" allowTransparency="true"></iframe>
+                </li>
+            </ul>
+        </div>
     </header>
     
     <nav>
