html structure for gifts

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,19 @@
         </ul>
     </nav>
     
-    <div id="content"></div>
+    <div id="content">
+        <div class="gift">
+            <a href="http://www.thinkgeek.com/product/ede2/" rel="external">
+                <img src="images/products/001.png" alt="Boneco Creeper"/>
+                <span class="description">Boneco Creeper</span>
+                <span class="vendor">ThinkGeek</span>
+                <span class="price">$59,99</span>
+            </a>
+            <ul class="tags">
+                <li class="geek"><a href="/geek">Geek</a></li>
+            </ul>
+        </div>
+    </div>
 
     <script src="scripts/main.js"></script>
     
