partial gift style

--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
             <a href="http://www.thinkgeek.com/product/ede2/" rel="external">
                 <img src="images/products/001.png" alt="Boneco Creeper"/>
                 <span class="description">Boneco Creeper</span>
-                <span class="vendor">ThinkGeek</span>
                 <span class="price">$59,99</span>
+                <span class="vendor thinkgeek">ThinkGeek</span>
             </a>
             <ul class="tags">
                 <li class="geek"><a href="/geek">Geek</a></li>
