partial gift style

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,9 @@
     <div id="content">
         <div class="gift">
             <a href="http://www.thinkgeek.com/product/ede2/" rel="external">
-                <img src="images/products/001.png" alt="Boneco Creeper"/>
+                <div class="photo">
+                    <img src="images/products/001.png" alt="Boneco Creeper"/>
+                </div>
                 <span class="description">Boneco Creeper</span>
                 <span class="price">$59,99</span>
                 <span class="vendor thinkgeek">ThinkGeek</span>
