--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
         <div class="gift">
             <a class="product" href="#" rel="external">
                 <div class="photo corner-bottom-right">
-                    <img src="images/products/003.png" alt="Boneco Creeper">
+                    <img src="images/products/003.png" height="330" alt="Boneco Creeper">
                 </div>
                 <span class="description">Boneco Creeper</span>
                 <div class="vendor" title="ThinkGeek">
@@ -96,7 +96,7 @@
                 <div class="photo corner-bottom-right">
                     <img src="images/products/001.png" alt="Boneco Creeper">
                 </div>
-                <span class="description">Boneco Creeper com o texto longo</span>
+                <span class="description">Boneco Creeper</span>
                 <div class="vendor" title="ThinkGeek">
                     <img src="images/vendors/thinkgeek.png" class="store" alt="ThinkGeek">
                     <span class="price">$59,99</span>
